--- a/css/status-bar.css
+++ b/css/status-bar.css
@@ -1,10 +1,17 @@
-.status-bar{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 30px;
-    color: #656565;
+.status-box{
+    margin-bottom: 55px;
 }
-
+.status-bar{
+    position: fixed;
+    width: 100%;
+    background-color: #ffffff;
+    top: 0%;
+    left: 0%;
+    padding: 10px 20px;
+    display: flex;
+    color: #656565;
+    justify-content: space-between;
+}
 .status-bar i{
     font-size:14px;
 }
