--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ body{
 	font-family: 'Open Sans', -apple-system, BlinkMacSystemFont,
 	 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
 	  'Helvetica Neue', sans-serif;
+	  height: 10000px;
 }
 
 a{
