--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -5,7 +5,7 @@
     padding: 20px 50px;
     left: 0px;
     bottom: 0px;
-    border: 1px solid #f7f7f7;
+    border-top: 1px solid #f7f7f7;
 }
 
 .nav .nav__list{
@@ -15,4 +15,23 @@
 
 .nav i{
     font-size: 20px;
+}
+
+.nav .nav__list-link{
+    position: relative;
+}
+
+.nav .nav__badge{
+    position: absolute;
+    top: -7px;
+    right: -7px;
+    font-size: 10px;
+    color: white;
+    background-color: #dc5d46;
+    width: 17px;
+    height: 17px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
 }
