--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,9 @@
 @import "status-bar.css";
 @import "header.css";
 @import "nav-bar.css";
+@import "friend.css";
+@import "friends.css";
+@import "find.css";
 
 *{
 	box-sizing:border-box;
@@ -15,11 +18,11 @@ body{
 	font-family: 'Open Sans', -apple-system, BlinkMacSystemFont,
 	 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
 	  'Helvetica Neue', sans-serif;
-	  height: 10000px;
 }
 
 a{
 	color:inherit;
+	text-decoration: none;
 }
 
 li{
