--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -11,6 +11,7 @@
 .nav .nav__list{
     display: flex;
     justify-content: space-between;
+    list-style: none;
 }
 
 .nav i{
@@ -34,4 +35,17 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
+}
+@keyframes showNavBar{
+    from{
+        transform: translateY(80px);
+    }
+    to{
+        transform: none;
+    }
+}
+.nav{
+    transform: translateY(80px);
+    animation: showNavBar .5s ease-out forwards;
+    animation-delay: .5s;
 }
