--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
 @import "reset.css";
 @import "status-bar.css";
 @import "header.css";
@@ -6,6 +6,10 @@
 @import "friend.css";
 @import "friends.css";
 @import "find.css";
+@import "more.css";
+@import "settings.css";
+@import "chat.css";
+@import "mobile.css";
 
 *{
 	box-sizing:border-box;
@@ -25,6 +29,17 @@ a{
 	text-decoration: none;
 }
 
-li{
-	list-style: none;
+@keyframes fadeIn{
+	from{
+		opacity: 0;
+		transform: translateY(20px);
+	}
+	to{
+		opacity: 1;
+		transform: none;
+	}
+}
+
+main{
+	animation: fadeIn .5s ease-in-out;
 }
